Add new concepts
 * Validation
 * ValidationResult
 * Conversion
 * Rule check